@@ -3,29 +3,29 @@ import java.util.Collections;
 import java.util.List;
 
 public class EvaluarManos {
-    
+
     public static String evaluarMano(List<Baraja.Carta> manoJugador, List<Baraja.Carta> cartasComunitarias) {
         List<Baraja.Carta> todasLasCartas = new ArrayList<>(manoJugador);
         todasLasCartas.addAll(cartasComunitarias);
-        
+
         // Generar todas las combinaciones posibles de 5 cartas
         List<List<Baraja.Carta>> combinaciones = generarCombinaciones(todasLasCartas);
-        
+
         String mejorMano = "";
         int mejorValor = 0;
         List<Baraja.Carta> mejorCombinacion = null;
-        
+
         for (List<Baraja.Carta> combinacion : combinaciones) {
             String manoActual = evaluarCombinacion(combinacion);
             int valorActual = obtenerValorMano(manoActual);
-            
+
             if (valorActual > mejorValor) {
                 mejorValor = valorActual;
                 mejorMano = manoActual;
                 mejorCombinacion = new ArrayList<>(combinacion);
             }
         }
-        
+
         // Añadimos el kicker a la descripción de la mano si es aplicable
         if (mejorCombinacion != null) {
             String kicker = obtenerKicker(mejorCombinacion, mejorMano);
@@ -33,16 +33,16 @@ public class EvaluarManos {
                 mejorMano += " con kicker " + kicker;
             }
         }
-        
+
         return mejorMano;
     }
-    
+
     public static List<List<Baraja.Carta>> generarCombinaciones(List<Baraja.Carta> cartas) {
         List<List<Baraja.Carta>> combinaciones = new ArrayList<>();
         generarCombinacionesRecursivo(cartas, new ArrayList<>(), combinaciones, 0, 5);
         return combinaciones;
     }
-    
+
     private static void generarCombinacionesRecursivo(List<Baraja.Carta> cartas, List<Baraja.Carta> actual, List<List<Baraja.Carta>> combinaciones, int inicio, int longitud) {
         if (longitud == 0) {
             combinaciones.add(new ArrayList<>(actual));
@@ -50,18 +50,15 @@ public class EvaluarManos {
             for (int i = inicio; i <= cartas.size() - longitud; i++) {
                 actual.add(cartas.get(i));
                 generarCombinacionesRecursivo(cartas, actual, combinaciones, i + 1, longitud - 1);
-                actual.removeLast();
+                actual.remove(actual.size() - 1); // Cambio aquí, porque ArrayList no tiene removeLast()
             }
         }
     }
-    
+
     public static String evaluarCombinacion(List<Baraja.Carta> combinacion) {
         // Ordenar las cartas de mayor a menor valor
         combinacion.sort(Collections.reverseOrder());
-        
-        // Aquí se implementarían los checks para cada tipo de mano de poker
-        // Por simplicidad, solo se implementan algunos ejemplos
-        
+
         if (esEscaleraReal(combinacion)) return "Escalera Real";
         if (esEscaleraColor(combinacion)) return "Escalera de Color";
         if (esPoker(combinacion)) return "Póker";
@@ -71,33 +68,28 @@ public class EvaluarManos {
         if (esTrio(combinacion)) return "Trío";
         if (esDoblePareja(combinacion)) return "Doble Pareja";
         if (esPareja(combinacion)) return "Pareja";
-        
-        return "Carta Alta: " + combinacion.getFirst().valor;
+
+        return "Carta Alta: " + combinacion.get(0).valor;
     }
-    
+
     private static boolean esEscaleraReal(List<Baraja.Carta> combinacion) {
-        // Implementación simplificada
-        return esEscaleraColor(combinacion) && combinacion.getFirst().valor.equals("A");
+        return esEscaleraColor(combinacion) && combinacion.get(0).valor.equals("A");
     }
-    
+
     private static boolean esEscaleraColor(List<Baraja.Carta> combinacion) {
-        // Implementación simplificada
         return esEscalera(combinacion) && esColor(combinacion);
     }
-    
+
     private static boolean esPoker(List<Baraja.Carta> combinacion) {
-        // Implementación simplificada
         return contarRepeticiones(combinacion, 4) == 1;
     }
-    
+
     private static boolean esFullHouse(List<Baraja.Carta> combinacion) {
-        // Implementación simplificada
         return contarRepeticiones(combinacion, 3) == 1 && contarRepeticiones(combinacion, 2) == 1;
     }
-    
+
     private static boolean esColor(List<Baraja.Carta> combinacion) {
-        // Implementación simplificada
-        String palo = combinacion.getFirst().palo;
+        String palo = combinacion.get(0).palo;
         for (Baraja.Carta carta : combinacion) {
             if (!carta.palo.equals(palo)) {
                 return false;
@@ -105,9 +97,8 @@ public class EvaluarManos {
         }
         return true;
     }
-    
+
     private static boolean esEscalera(List<Baraja.Carta> combinacion) {
-        // Implementación simplificada
         for (int i = 0; i < combinacion.size() - 1; i++) {
             if (combinacion.get(i).valorNumerico - combinacion.get(i + 1).valorNumerico != 1) {
                 return false;
@@ -115,22 +106,19 @@ public class EvaluarManos {
         }
         return true;
     }
-    
+
     private static boolean esTrio(List<Baraja.Carta> combinacion) {
-        // Implementación simplificada
         return contarRepeticiones(combinacion, 3) == 1;
     }
-    
+
     private static boolean esDoblePareja(List<Baraja.Carta> combinacion) {
-        // Implementación simplificada
         return contarRepeticiones(combinacion, 2) == 2;
     }
-    
+
     private static boolean esPareja(List<Baraja.Carta> combinacion) {
-        // Implementación simplificada
         return contarRepeticiones(combinacion, 2) == 1;
     }
-    
+
     private static int contarRepeticiones(List<Baraja.Carta> combinacion, int numero) {
         int count = 0;
         for (int i = 0; i < combinacion.size(); i++) {
@@ -142,15 +130,13 @@ public class EvaluarManos {
             }
             if (repeticiones == numero) {
                 count++;
-                // Saltamos las cartas que ya contamos
                 i += numero - 1;
             }
         }
         return count;
     }
-    
+
     public static int obtenerValorMano(String mano) {
-        // Asignamos valores arbitrarios a cada tipo de mano para comparación
         return switch (mano) {
             case "Escalera Real" -> 10;
             case "Escalera de Color" -> 9;
@@ -164,34 +150,30 @@ public class EvaluarManos {
             default -> 1;
         };
     }
-    
+
     private static String obtenerKicker(List<Baraja.Carta> combinacion, String mano) {
-        // Solo aplicamos el kicker para ciertas manos
         if (mano.startsWith("Pareja") || mano.startsWith("Trío") || mano.startsWith("Doble Pareja")) {
             List<Baraja.Carta> kickers = new ArrayList<>();
 
             String[] partes = mano.split(" ");
             List<String> valoresPrincipales = new ArrayList<>();
             for (String parte : partes) {
-                if (!parte.equals("de") && !parte.equals("Carta") && !parte.equals("Alta:") && 
-                    !parte.equals("Pareja") && !parte.equals("Trío") && !parte.equals("Doble") && 
-                    !parte.equals("Full") && !parte.equals("House") && !parte.equals("Póker") && 
-                    !parte.equals("Color") && !parte.equals("Escalera") && !parte.equals("con") && !parte.equals("kicker")) {
+                if (!parte.equals("de") && !parte.equals("Carta") && !parte.equals("Alta:") &&
+                        !parte.equals("Pareja") && !parte.equals("Trío") && !parte.equals("Doble") &&
+                        !parte.equals("Full") && !parte.equals("House") && !parte.equals("Póker") &&
+                        !parte.equals("Color") && !parte.equals("Escalera") && !parte.equals("con") && !parte.equals("kicker")) {
                     valoresPrincipales.add(parte);
                 }
             }
-            
-            // Buscamos las cartas que no forman parte de los valores principales
+
             for (Baraja.Carta carta : combinacion) {
                 if (!valoresPrincipales.contains(carta.valor)) {
                     kickers.add(carta);
                 }
             }
-            
-            // Ordenamos los kickers de mayor a menor
+
             kickers.sort(Collections.reverseOrder());
-            // Devolvemos el valor del kicker más alto
-            return kickers.isEmpty() ? "" : kickers.getFirst().valor;
+            return kickers.isEmpty() ? "" : kickers.get(0).valor;
         }
         return "";
     }
